--- a/main.html
+++ b/main.html
@@ -9,18 +9,18 @@
 <button id="open-modal" type="button" class="btn btn-primary">Open Modal</button>
 
 <!-- Modal -->
-<div class="modal fade" id="newton-modal" tabindex="-1" aria-labelledby="newton-modal-label" aria-hidden="true">
+<div class="modal fade show" id="newton-modal" tabindex="-1" aria-labelledby="newton-modal-label" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="newton-modal-label">New Modal</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-toggle="modal" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary show" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
